--- a/fakebook-server/src/main/resources/application.yaml
+++ b/fakebook-server/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
+  application:
+    name: fakebook-server
   datasource:
-    url: jdbc:mariadb://localhost:3306/tutorial
+    url: jdbc:mariadb://localhost:3306/fakebook
     driver-class-name: org.mariadb.jdbc.Driver
     username: admin
     password: admin
@@ -8,5 +10,8 @@ spring:
     open-in-view: false
     generate-ddl: true
     show-sql: true
+    properties: 
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect 
     hibernate:
       ddl-auto: update
