--- a/fakebook-server/src/main/resources/application.yaml
+++ b/fakebook-server/src/main/resources/application.yaml
@@ -1,17 +1,3 @@
 spring:
-  application:
-    name: fakebook-server
-  datasource:
-    url: jdbc:mariadb://localhost:3306/fakebook
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: admin
-    password: admin
-  jpa:
-    open-in-view: false
-    generate-ddl: true
-    show-sql: true
-    properties: 
-      hibernate:
-        dialect: org.hibernate.dialect.MariaDBDialect 
-    hibernate:
-      ddl-auto: update
+  profiles:
+    active: local
