--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -15,3 +15,10 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
+
+service:
+  jwt:
+    secret: jwtsecretkey
+    expire-minutes: 15
+
+
