--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -19,7 +19,6 @@ spring:
 service:
   auth:
     jwt-secret: jwtsecretkey
-    jwt-expire-minutes: 15
+    access-expire-minutes: 15
+    refresh-expire-days: 30
     password-encoding-secret: passwordsecretkey
-
-
