etc: spring security 심화학습 중...

--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -15,6 +15,11 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
 
 service:
   auth:
