--- a/fakebook-server/build.gradle
+++ b/fakebook-server/build.gradle
@@ -35,3 +35,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+task print() {
+    doLast {
+        println("github push completed")
+    }
+}
