fix: jenkins build test messge modified

--- a/fakebook-server/build.gradle
+++ b/fakebook-server/build.gradle
@@ -38,6 +38,6 @@ test {
 
 task print() {
     doLast {
-        println("github push completed")
+        println("build by jenkins done")
     }
 }
