feat: logout feature added

--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -16,8 +16,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
+        format_sql: true
     hibernate:
       ddl-auto: update
+
   devtools:
     livereload:
       enabled: true
