--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -16,7 +16,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
-        format_sql: true
+        format_sql: false
     hibernate:
       ddl-auto: update
 
