--- a/fakebook-server/src/main/resources/application-local.yaml
+++ b/fakebook-server/src/main/resources/application-local.yaml
@@ -19,7 +19,9 @@ spring:
         format_sql: false
     hibernate:
       ddl-auto: update
-
+  redis:
+    host: localhost
+    port: 6379
   devtools:
     livereload:
       enabled: true
